--- a/iterate_over_object.html
+++ b/iterate_over_object.html
@@ -1,3 +1,13 @@
+<!-- WHEN YOU HAVE A FULL PROJECT NPM RUN BUILD 
+    YOU WILL SEE BUILD FOLDER FROM WEBPACK BEHIND THE SCENES
+    sudo npm install serve -g
+    serve -s build
+    run on localhost: 5000
+    to see optimized prod. build
+    all from create react app
+    react.js essential training
+-->
+
 <!DOCTYPE html>
 <html>
     <head>
